[gd_scene load_steps=2 format=3 uid="uid://c80oesvyem071"]

[ext_resource type="Script" uid="uid://dgd0oefhyh0f1" path="res://test_scenes/game/game.gd" id="1_w02lp"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w02lp")

[node name="WinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 384.0
offset_right = 725.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 50
text = "win"

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 398.0
offset_right = 1230.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 50
text = "GoBack"

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 721.0
offset_top = 174.0
offset_right = 1006.0
offset_bottom = 243.0
theme_override_font_sizes/font_size = 50
text = "Placeholder Level"

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
